# superr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/qua_ast/src/: pretty_print.rs
crates/qua_ast/tests/: assign_statements.rs  binary_expressions.rs  block_statements.rs  break_continue_statements.rs  call_expressions.rs  common.rs  complex_expressions.rs  declaration_statements.rs  edge_cases.rs  expression_statements.rs  for_statements.rs  functions.rs  types.rs  (+9 more)
crates/qua_compiler/: Cargo.toml
crates/qua_lexer/: Cargo.toml
crates/qua_parser/: Cargo.toml
crates/superr/: Cargo.toml
crates/superr_inspect/: Cargo.toml
crates/superr_optimizers/: Cargo.toml
crates/superr_optimizers/src/optimizers/: diffing.rs  random_search.rs
crates/superr_vm/: Cargo.toml
docs/qua/: precedence.md
examples/: 0_to_5.s  5_plus_3.s  factorial.qua  infinite_42.s  infinite_adding.s  xor_swap.s
qua_ast/: Cargo.toml
qua_ast/src/: lib.rs
qua_lexer/: Cargo.toml
qua_lexer/fuzz/: Cargo.toml
qua_lexer/src/: keyword.rs  lexer.rs  lib.rs  token.rs
qua_parser/: Cargo.toml
qua_parser/src/: ast.rs  pretty_print.rs
superr/: Cargo.toml
superr/src/: main.rs
superr/src/cli/: bench.rs  gen.rs  inspect.rs  mod.rs  optimize.rs  run.rs
superr/src/cli/qua/: lex.rs
superr_assembler/: Cargo.toml
superr_assembler/examples/: count.s
superr_inspect/src/: main.rs  memory_viewer.rs  optimizer_options.rs
superr_optimizers/: Cargo.toml
superr_optimizers/src/: lib.rs  optimizer.rs  superoptimizer.rs  vm_pool.rs
superr_optimizers/src/optimizers/: diffing.rs  exhaustive.rs  ga.rs  mod.rs  random_search.rs
superr_vm/: Cargo.toml
superr_vm/src/: address.rs  instruction.rs  lib.rs  program.rs  vm.rs
vm/src/: instruction.rs  main.rs  vm.rs
(+67 files in other folders)
