[package]
name = "superr_optimizers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ctrlc = "3.4.4"
fastrand = "2.1.0"
itertools = "0.13.0"
rayon = "1.10.0"
superr_vm = { path = "../superr_vm/" }

